test navigation container

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <nav>
-        <a href="index.html">home</a>
-        <a href="gallery.html">gallery</a>
-        <a href="contact.html">contact</a>
-    </nav>
+    <img href="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast" />
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-align-center">
+                <a href="index.html">home</a>
+                <a href="gallery.html">gallery</a>
+                <a href="contact.html">contact</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
