style home page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <img href="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast" />
+    <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast" class="d-block hero-image border rounded shadow p-1 bg-white"/>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-align-center">
+            <div class="col-12 text-center border">
                 <a href="index.html">home</a>
                 <a href="gallery.html">gallery</a>
                 <a href="contact.html">contact</a>
