--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,17 @@
 
 <body>
     <h1>Contact</h1>
-        <nav>
-            <a href="index.html">home</a>
-            <a href="gallery.html">gallery</a>
-            <a href="contact.html">contact</a>
-        </nav>
+    <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+        class="d-block hero-image border rounded shadow p-1 bg-white" />
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center border">
+                <a href="index.html">home</a>
+                <a href="gallery.html">gallery</a>
+                <a href="contact.html">contact</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
