--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast" class="d-block hero-image border rounded shadow p-1 bg-white"/>
+    <img src="/images/cafe-patio.jpg" alt="Patio" class="d-block hero-image border rounded shadow p-1 bg-white"/>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center border">
