--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Croissant Gallery</h1>
         <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
-            class="d-block hero-image border rounded shadow p-1 bg-white" />
+            class="d-block gallery-image border rounded shadow p-1 bg-white" />
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center border">
