adjust hero image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <img src="/images/cafe-patio.jpg" alt="Patio" class="d-flex hero-image"/>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center shadow">
+                <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid hero-image" />
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center border">
