--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         class="d-block hero-image border rounded shadow p-1 bg-white" />
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center border">
+            <div class="col-12 text-center navigation">
                 <a href="index.html">home</a>
                 <a href="gallery.html">gallery</a>
                 <a href="contact.html">contact</a>
