--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
             class="d-block gallery-image border rounded shadow p-1 bg-white" />
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center border">
+                <div class="col-12 text-center navigation">
                     <a href="index.html">home</a>
                     <a href="gallery.html">gallery</a>
                     <a href="contact.html">contact</a>
