--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <h1>Croisssants</h1>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center shadow">
-                <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid hero-image" />
+            <div class="col">
+                <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid shadow mt-3 mb-3" />
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center border">
+            <div class="col-12 text-center navigation">
                 <a href="index.html">home</a>
                 <a href="gallery.html">gallery</a>
                 <a href="contact.html">contact</a>
