--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </div>
     <div class="container">
         <div class="row">
+            <div class="col">
+                <p>A croissant is a buttery, flaky viennoiserie of Austrian origin, named for it's historical cresent shape.</p>
+            </div>
             <div class="col-12 text-center navigation">
                 <a href="index.html">home</a>
                 <a href="gallery.html">gallery</a>
