--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>A croissant is a buttery, flaky viennoiserie of Austrian origin, named for it's historical cresent shape.</p>
+                <p class="intro">A croissant is a buttery, flaky viennoiserie of Austrian origin, named for it's historical cresent shape.</p>
             </div>
             <div class="col-12 text-center navigation">
                 <a href="index.html">home</a>
