--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,14 @@
 <body>
     <h1>Contact</h1>
     <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
-        class="d-block hero-image border rounded shadow p-1 bg-white" />
+        class="d-block gallery-image border rounded shadow p-1 bg-white" />
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-block text-center mb-5 email-link">
+                <a href="#">info@bigfluffycroissant.com</a>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center navigation">
