adjust hero image to full width

--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid shadow mt-3 mb-3" />
-            </div>
-        </div>
-    </div>
+    <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid width-100 height-auto shadow mt-3 mb-3" />
+
     <div class="container">
         <div class="row">
             <div class="col">
