--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,48 @@
 </head>
 <body>
     <h1>Croissant Gallery</h1>
-        <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
-            class="d-block gallery-image border rounded shadow p-1 bg-white" />
+    <div class="container mb-5">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                    <p class="caption">croissant 1</p>
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                <p class="caption">croissant 2</p>
+
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                <p class="caption">croissant 3</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                <p class="caption">croissant 4</p>
+
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                <p class="caption">croissant 5</p>
+
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                    class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
+                <p class="caption">croissant 6</p>
+            </div>
+        </div>
+    </div>
+
+
+
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center navigation">
