add SEO to all pages

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Contact</title>
+    <title>Croissant Contact</title>
     <meta charset="UTF-8">
+    <meta name ="description" content="Contact us for more information about croissants">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,8 +14,8 @@
 </head>
 
 <body>
-    <h1>Contact</h1>
-    <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+    <h1>Contact Us for our best Croissant ideas</h1>
+    <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
         class="d-block gallery-image border rounded shadow p-1 bg-white" />
     <div class="container">
         <div class="row">
@@ -26,9 +27,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center navigation">
-                <a href="index.html">home</a>
-                <a href="gallery.html">gallery</a>
-                <a href="contact.html">contact</a>
+                <a href="/" title="Croissant history">home</a>
+                <a href="/gallery.html" title="Croissant photos">gallery</a>
+                <a href="/contact.html" title="Croissant contact">contact</a>
             </div>
         </div>
     </div>
