--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <title>Croissant Gallery</title>
+    <title>Croissant Photo Gallery</title>
     <meta charset="UTF-8">
+    <meta name="description" content="Photo gallery of croissant ideas">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,53 +17,50 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                     <p class="caption">croissant 1</p>
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                 <p class="caption">croissant 2</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                 <p class="caption">croissant 3</p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                 <p class="caption">croissant 4</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                 <p class="caption">croissant 5</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant-Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
                 <p class="caption">croissant 6</p>
             </div>
         </div>
     </div>
-
-
-
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center navigation">
-                    <a href="index.html">home</a>
-                    <a href="gallery.html">gallery</a>
-                    <a href="contact.html">contact</a>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center navigation">
+                    <a href="/" title="Croissant history">croissant history</a>
+                    <a href="/gallery.html" title="Croissant photos">croissant recipes</a>
+                    <a href="/contact.html" title="Croissant contact">more croissant information</a>
             </div>
         </div>
+    </div>
 </body>
 </html>
