--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Croissants</title>
+    <title>Croissant History and Recipes</title>
     <meta charset="UTF-8">
+    <meta >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,7 +12,7 @@
 </head>
 <body>
     <h1>Croisssants</h1>
-    <img src="/images/patio_breakfast.jpg" alt="Patio" class="img-fluid width-100 height-auto shadow mt-3 mb-3" />
+    <img src="/images/patio_breakfast.jpg" alt="Croissant breakfast on an outdoor Patio" class="img-fluid width-100 height-auto shadow mt-3 mb-3" />
 
     <div class="container">
         <div class="row">
@@ -19,11 +20,11 @@
                 <p class="intro">A croissant is a buttery, flaky viennoiserie of Austrian origin, named for it's historical cresent shape.</p>
             </div>
             <div class="col-12 text-center navigation">
-                <a href="index.html">home</a>
-                <a href="gallery.html">gallery</a>
-                <a href="contact.html">contact</a>
+                <a href="/" title="Croissant history">croissant history</a>
+                <a href="/gallery.html" title="Croissant photos">croissant recipes</a>
+                <a href="/contact.html" title="Croissant contact">more croissant information</a>
             </div>
-        </div>
+        <div>
     </div>
 </body>
 </html>
