--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Croissant Contact</title>
+    <title>Croissant Contact for more Ideas and Recipes</title>
     <meta charset="UTF-8">
     <meta name ="description" content="Contact us for more information about croissants">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,9 +27,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center navigation">
-                <a href="/" title="Croissant history">home</a>
-                <a href="/gallery.html" title="Croissant photos">gallery</a>
-                <a href="/contact.html" title="Croissant contact">contact</a>
+                <a href="/" title="Croissant history">croissant history</a>
+                <a href="/gallery.html" title="Croissant photos">croissant recipes</a>
+                <a href="/contact.html" title="Croissant contact">more croissant information</a>
             </div>
         </div>
     </div>
