--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <title>Croissant Photo Gallery</title>
+    <title>Baking Inspiration for Croissants</title>
     <meta charset="UTF-8">
     <meta name="description" content="Photo gallery of croissant ideas">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
