--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/src/styles.css" />
 </head>
 <body>
-    <h1>Croisssants</h1>
+    <h1>All about Croisssants</h1>
     <img src="/images/patio_breakfast.jpg" alt="Croissant breakfast on an outdoor Patio" class="img-fluid width-100 height-auto shadow mt-3 mb-3" />
 
     <div class="container">
