heading adjustments for SEEO

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <h1>Contact Us for our best Croissant ideas</h1>
+    <h2>Contact Us</h2>
+    <h1>Learn more about Croissants</h1>
     <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
         class="d-block gallery-image border rounded shadow p-1 bg-white" />
     <div class="container">
