--- a/gallery.html
+++ b/gallery.html
@@ -13,43 +13,43 @@
    
 </head>
 <body>
-    <h1>Croissant Gallery</h1>
+    <h1>Croissant Recipes</h1>
     <div class="container mb-5">
         <div class="row">
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="chocolate rum croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                    <p class="caption">croissant 1</p>
+                    <p class="caption">chocolate rum croissants</p>
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="traditional butter croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                <p class="caption">croissant 2</p>
+                <p class="caption">traditional butter croissants</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="bacon and feta croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                <p class="caption">croissant 3</p>
+                <p class="caption">bacon and feta croissants</p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="plum pudding croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                <p class="caption">croissant 4</p>
+                <p class="caption">plum pudding croissants</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="basil and sweet pepper croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                <p class="caption">croissant 5</p>
+                <p class="caption">basil and sweet pepper croissants</p>
 
             </div>
             <div class="col-sm-4">
-                <img src="/images/CroissantBreakfast.jpg" alt="Croissant Breakfast"
+                <img src="/images/CroissantBreakfast.jpg" alt="three cheese croissants"
                     class="img-fluid gallery-image border rounded shadow p-1 bg-white" />
-                <p class="caption">croissant 6</p>
+                <p class="caption">three cheese croissants</p>
             </div>
         </div>
     </div>
